# task_app_test_project

./: .coveragerc  .gitignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  ruff.toml
config/: settings.py  urls.py  wsgi.py
envs.example/: app.env  db.env
task_app/apps/: conftest.py
task_app/apps/tasks/: admin.py  apps.py  filters.py  models.py  querysets.py  serializer_fields.py  serializers.py  urls.py  views.py
task_app/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_options_task_status.py  0003_auto_20240912_1007.py  0004_remove_task_is_done.py
task_app/apps/tasks/tests/: factories.py  test_views.py
task_app/apps/users/: serializers.py  urls.py  views.py
task_app/apps/users/tests/: factories.py  test_views.py
